--- a/components/NavigationButton.module.css
+++ b/components/NavigationButton.module.css
@@ -1,4 +1,8 @@
-.button {
-  background-color: red;
+.navButton {
+  background-color: gray;
+  padding: 20px;
+}
+
+.navButton svg {
   color: white;
 }
