--- a/components/Navigation.module.css
+++ b/components/Navigation.module.css
@@ -1,3 +1,10 @@
-.nav button {
-  display: block;
+.navLabel {
+  font-weight: bold;
+  font-size: 19px;
+  margin-left: 20px;
+  margin-right: 15px;
+}
+
+.nav button ~ button {
+  margin-top: 15px;
 }
