--- a/styles/app.css
+++ b/styles/app.css
@@ -1,3 +1,5 @@
+@import 'variables.css';
+
 * {
   margin: 0;
   padding: 0;
@@ -7,4 +9,15 @@
 
 svg {
   color: gray;
+}
+
+html {
+  font-size: 15px;
+}
+
+body {
+  background-color: var(--c-primary);
+  font-size: 1rem;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica,
+    Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
 }
