--- a/components/NavigationButton.module.css
+++ b/components/NavigationButton.module.css
@@ -1,4 +1,5 @@
 .navButton {
+  position: relative;
   color: var(--c-text-color);
   padding: 10px;
   border-radius: 99px;
@@ -14,6 +15,18 @@
 
 .navButton.selected {
   color: var(--c-theme);
+}
+
+.notification {
+  background-color: var(--c-theme);
+  padding: 0 6px;
+  height: 17px;
+  position: absolute;
+  top: 5px;
+  left: 20px;
+  font-size: 11px;
+  border-radius: 17px;
+  border: 1px solid var(--c-primary);
 }
 
 svg {
