--- a/components/NavigationButton.module.css
+++ b/components/NavigationButton.module.css
@@ -1,18 +1,6 @@
 .navButton {
   position: relative;
-  color: var(--c-text-color);
   padding: 10px;
-  border-radius: 99px;
-  display: flex;
-  align-items: center;
-  cursor: pointer;
-  background-color: transparent;
-  transition: var(--t-fade);
-}
-
-.navButton:hover {
-  background-color: var(--c-theme-20);
-  color: var(--c-theme);
 }
 
 .navButton:hover > svg {
@@ -39,4 +27,8 @@
 svg {
   font-size: 26px;
   color: var(--c-text-color);
+}
+
+svg + * {
+  margin: 0 15px 0 20px;
 }
