--- a/components/NavigationButton.module.css
+++ b/components/NavigationButton.module.css
@@ -24,11 +24,11 @@
   color: var(--c-text-color);
 }
 
-svg {
+.navButton > svg {
   font-size: 26px;
   color: var(--c-text-color);
 }
 
-svg + * {
+.navButton > svg + * {
   margin: 0 15px 0 20px;
 }
