--- a/components/ThemeButton.module.css
+++ b/components/ThemeButton.module.css
@@ -4,10 +4,12 @@
 
   padding: 0 15px;
   height: 40px;
+  min-width: 40px;
 
   font-weight: bold;
 }
 
 .large {
-  height: 47px;
+  min-height: 47px;
+  min-width: 47px;
 }
